--- a/themes/watarona-theme/layouts/index.html
+++ b/themes/watarona-theme/layouts/index.html
@@ -5,10 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 
 <body>
-    
+    <div class="container">
+        <header class="page-header wrapper">
+            <h1 class="site_name">watarona tech blog</h1>
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="partials/about.html">about</a></li>
+                    <li><a href="partials/blog.html">blog</a></li>
+                    <li><a href="partials/works.html">works</a></li>
+                    <li><a href="https://twitter.com/watarona">Twitter</a></li>
+                    <li><a href="https://github.com/watarona">GitHub</a></li>
+                </ul>
+            </nav>
+        </header>
+
+    </div>
 </body>
 
 </html>
