update html css images

--- a/themes/watarona-theme/layouts/index.html
+++ b/themes/watarona-theme/layouts/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="icon" type="image/png" href="../static/images/top01.JPG">
 </head>
 
 <body>
@@ -19,10 +20,10 @@
                     <li><a href="partials/works.html">works</a></li>
                     <li><a href="https://twitter.com/watarona">Twitter</a></li>
                     <li><a href="https://github.com/watarona">GitHub</a></li>
+                    <li><a href="https://www.kaggle.com/watarona">Kaggle</a></li>
                 </ul>
             </nav>
         </header>
-
     </div>
 </body>
 
