--- a/themes/watarona-theme/static/css/style.css
+++ b/themes/watarona-theme/static/css/style.css
@@ -1,15 +1,12 @@
 @import url(assets/scripts/sanitize.css);
-
 body {
     background-color: #f0f0f0;
     background-image: url(../images/bg.jpg);
-    
-
-
+    line-height: 1.7;
 }
-.container {
-    
-    width: 1000px;
+.container {   
+    width: 2400px;
+    height: 1300px;
 }
 header {
     padding: 5px;
@@ -17,8 +14,8 @@ header {
 }
 .site_name {
     font-family: serif ;
-    padding: 150px;
-    margin: 0;
+    width: 2500px;
+    margin-top: 14px;
     font-size: 100px;
     font-weight: bold;
     text-align: left;
@@ -38,16 +35,20 @@ a{
 }
 .main-nav li{
     margin-left: 36px;
+    padding-right: 0;
+    float: right;
 }
 .main-nav a{
     color:#000000;
 }
 .page-header{
-    display: flex;
+    /* display: flex;
+    justify-content: space-between; */
+    align-items: flex-start;
     
 }
 .wrapper{
     max-width: 1100px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     padding: 0 4%;
 }
