--- a/themes/watarona-theme/static/css/style.css
+++ b/themes/watarona-theme/static/css/style.css
@@ -1,12 +1,12 @@
 @import url(assets/scripts/sanitize.css);
 body {
     background-color: #f0f0f0;
-    background-image: url(../images/bg.jpg);
+    background-image: url(../images/bg2.jpg);
     line-height: 1.7;
 }
 .container {   
-    width: 2400px;
-    height: 1300px;
+    width: 1500px;
+    height: 900px;
 }
 header {
     padding: 5px;
@@ -14,7 +14,7 @@ header {
 }
 .site_name {
     font-family: serif ;
-    width: 2500px;
+    width: 1500px;
     margin-top: 14px;
     font-size: 100px;
     font-weight: bold;
@@ -37,9 +37,11 @@ a{
     margin-left: 36px;
     padding-right: 0;
     float: right;
+    font-weight: bold;
 }
 .main-nav a{
-    color:#000000;
+    color:#fff;
+    background:  rgb(0, 0, 0);
 }
 .page-header{
     /* display: flex;
@@ -49,6 +51,6 @@ a{
 }
 .wrapper{
     max-width: 1100px;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     padding: 0 4%;
 }
